--- a/client/src/widgets/calendar-bar.scss
+++ b/client/src/widgets/calendar-bar.scss
@@ -5,19 +5,22 @@
     width: 100%;
     direction: rtl;
 
-    &::-webkit-scrollbar-track {
-        -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3);
-        background-color: transparent;
-    }
+    // use custom color only on desktop
+    @media only screen and (min-device-width : 800px) {
+        &::-webkit-scrollbar-track {
+            -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3);
+            background-color: transparent;
+        }
 
-    &::-webkit-scrollbar {
-        height: 8px;
-        background-color: transparent;
-    }
+        &::-webkit-scrollbar {
+            height: 8px;
+            background-color: transparent;
+        }
 
-    &::-webkit-scrollbar-thumb {
-        -webkit-box-shadow: inset 0 0 3px rgba(255,255,255,.2);
-        background-color: rgba(255,255,255,.1);
+        &::-webkit-scrollbar-thumb {
+            -webkit-box-shadow: inset 0 0 3px rgba(255,255,255,.2);
+            background-color: rgba(255,255,255,.1);
+        }
     }
 
 /* the following only works on Chrome */
